--- a/.github/workflows/spyder.yml
+++ b/.github/workflows/spyder.yml
@@ -1,36 +1,35 @@
-name: Run Spider Daily
+name: Run TSMC Spider
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # 每天台灣時間早上 9 點（UTC+8 = UTC+1）
-  workflow_dispatch:     # 支援手動執行
+    - cron: '0 1 * * *'  # 每天台灣時間早上 9 點（UTC+8）
+  workflow_dispatch:      # 支援手動執行
 
 jobs:
-  run-spider:
+  spider:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install yfinance pandas
+      - name: Install dependencies
+        run: |
+          pip install yfinance pandas
 
-    - name: Run API spider
-      run: python api.py
+      - name: Run API Spider
+        run: python api.py
 
-    - name: Commit and Push CSV
-      run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
-        git add api.csv
-        git commit -m "Auto update api.csv" || echo "No changes to commit"
-        git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
-        git push
+      - name: Commit and Push CSV
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add api.csv
+          git commit -m "Auto update api.csv" || echo "No changes to commit"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
+          git push
